section finaly id added

--- a/assets/scss/modules/_servises.scss
+++ b/assets/scss/modules/_servises.scss
@@ -1,7 +1,7 @@
 /*servises*/
 
 #servises{
-    background-color: #F2F5F8;
+    background-color: $backgroundColor;
     .title-servises{
         text-align: center;
         font-size:24px;
