--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -393,4 +393,72 @@
   font-size: 12px;
   font-weight: 300;
   color: #59584C;
+}
+
+#final-section {
+  background: #F2F5F8;
+}
+#final-section .final-section {
+  padding: 30px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-self: center;
+  line-height: 2.2;
+}
+#final-section .final-section h2 {
+  font-size: 36px;
+  color: #404046;
+}
+#final-section .final-section p {
+  font-size: 20px;
+  color: #404040;
+  font-weight: 300;
+}
+#final-section .final-section button {
+  color: #fff;
+  font-size: 18px;
+  padding: 10px 25px;
+  background-color: #00D170;
+  outline: none;
+  border: none;
+  border-radius: 8px;
+  transition: all 0.2s ease-in-out;
+  margin: 45px 0;
+}
+#final-section .final-section button:hover {
+  background-color: #04e77d;
+}
+#final-section .final-section video {
+  border-radius: 8px;
+  max-width: 80%;
+}
+#final-section .final-section-items {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  gap: 20px;
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 40px;
+}
+#final-section .final-section-items .final-section-item {
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+  border-radius: 16px;
+}
+#final-section .final-section-items .final-section-item .final-section-item-desc {
+  margin: 25px 0;
+  padding: 30px 0;
+}
+#final-section .final-section-items .final-section-item h2 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+#final-section .final-section-items .final-section-item p {
+  font-size: 14px;
+  font-weight: 300;
 }/*# sourceMappingURL=main.css.map */
