--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -399,7 +399,7 @@
   background: #F2F5F8;
 }
 #final-section .final-section {
-  padding: 30px 0;
+  padding: 25px 0;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -446,13 +446,16 @@
   background: #fff;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: right;
   padding: 15px;
   border-radius: 16px;
 }
+#final-section .final-section-items .final-section-item .final-section-item-img img {
+  width: 160px;
+}
 #final-section .final-section-items .final-section-item .final-section-item-desc {
   margin: 25px 0;
-  padding: 30px 0;
+  padding: 20px 0;
 }
 #final-section .final-section-items .final-section-item h2 {
   font-size: 16px;
@@ -461,4 +464,14 @@
 #final-section .final-section-items .final-section-item p {
   font-size: 14px;
   font-weight: 300;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 36px 64px;
+}
+footer .navbar ul li {
+  margin: 0 8px;
 }/*# sourceMappingURL=main.css.map */
