--- a/assets/scss/modules/_final-section.scss
+++ b/assets/scss/modules/_final-section.scss
@@ -1,7 +1,7 @@
 #final-section{
     background: $backgroundColor;
     .final-section{
-        padding:30px 0;
+        padding:25px 0;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -51,12 +51,18 @@
                 background: #fff;
                 display:flex;
                 align-items: center;
-                justify-content: space-between;
+                justify-content: right;
                 padding: 15px;
                 border-radius: 16px;
+                .final-section-item-img{
+                    img{
+                        width: 160px;
+                    }
+                }
                 .final-section-item-desc{
                     margin: 25px 0;
-                    padding: 30px 0;
+                    padding: 20px 0;
+                  
                 }
                 h2{
                   
